RESOLVED FIXED159489
iframe srcdoc with quirky doctype should be no-quirks mode
https://bugs.webkit.org/show_bug.cgi?id=159489
Summary iframe srcdoc with quirky doctype should be no-quirks mode
Simon Pieters (:zcorpan)
Reported 2016-07-06 13:51:39 PDT
http://software.hixie.ch/utilities/js/live-dom-viewer/saved/4303 <iframe srcdoc="<!doctype x>"> The srcdoc document should always be in no-quirks mode, regardless of the doctype. In WebKit if there's a quirky doctype it triggers quirks mode. https://html.spec.whatwg.org/multipage/syntax.html#the-initial-insertion-mode
Attachments
Ahmad Saleem
Comment 1 2022-08-08 16:54:18 PDT
I am able to reproduce this bug in Safari 15.6 on macOS 12.5 using attached test case, where it shows "BackCompat" mode for Safari in logs, while CSS1Compat mode for Firefox Nightly 105 and Chrome Canary 106. Thanks!
Ahmad Saleem
Comment 2 2022-08-08 16:55:43 PDT
*** Safari 15.6 on macOS 12.5 *** log: BackCompat rendering mode: CSS1Compat document has no title *** Firefox Nightly 105 *** log: CSS1Compat rendering mode: CSS1Compat document has no title *** Chrome Canary 106 *** log: CSS1Compat rendering mode: CSS1Compat document has no title
Radar WebKit Bug Importer
Comment 3 2022-08-10 11:05:54 PDT
Ryosuke Niwa
Comment 4 2022-08-10 12:15:43 PDT
Oh, we have a check for this in HTMLConstructionSite::setDefaultCompatibilityMode() but we're missing one in HTMLConstructionSite::setCompatibilityModeFromDoctype
Ryosuke Niwa
Comment 5 2022-08-10 13:10:20 PDT
EWS
Comment 6 2022-08-11 02:15:38 PDT
Committed 253326@main (4401d4e5b5d9): <https://commits.webkit.org/253326@main> Reviewed commits have been landed. Closing PR #3199 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.