iframe srcdoc with quirky doctype should be no-quirks mode https://bugs.webkit.org/show_bug.cgi?id=159489

Reviewed by Chris Dumez.

This patch addresses the bug that a document in srcdoc can be in quirks mode due to DOCTYPE.
New behavior of WebKit matches the spec, Gecko, and Blink.

* LayoutTests/fast/parser/strict-mode-in-srcdoc-with-quirks-doctype-expected.txt: Added.
* LayoutTests/fast/parser/strict-mode-in-srcdoc-with-quirks-doctype.html: Added.
* LayoutTests/fast/frames/srcdoc/srcdoc-can-be-in-qurks-mode-expected.txt:

* Source/WebCore/html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::setCompatibilityModeFromDoctype):
(WebCore::HTMLConstructionSite::insertDoctype):

Canonical link: https://commits.webkit.org/253326@main